# GLES-Shapes

./: .clang-format  .gitignore  CMakeLists.txt  README.md  ShapeDrawing.cpp  ShapeDrawing.h  main.cpp
support/include/glad/: glad.h
support/lib/: glfw3.lib
support/src/: glad.c
system/: GLFW_Platform.cpp  NoLog.h
system/Primitives/: ESShaderRepository.cpp  FontLibrary.cpp  FontLibrary.h  Matrices.h  OldShaders.cpp  ScreenLoc.cpp  ScreenLoc.h  ScreenRect.cpp  Vectors.h
system/include/: IPlatform.h  IPrimitive.h
system/src/base/: Color.cpp  Color.h  ESShaderRepository.cpp  ESShaderRepository.h  GLFW_Platform.cpp  Log.cpp  Log.h  Matrices.cpp  NoLog.h  RenderPacket.cpp  RenderPacket.h  ScreenRect.h  stb_image.c  stb_image.h
system/src/primitives/: BaseSprite.cpp  BaseSprite.h  ShapeDrawing.cpp  ShapeDrawing.h  VisualText.cpp  VisualText.h  VisualWWText.cpp  VisualWWText.h
